# nonebot-plugin-csgo-case-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml
csgo-case-simulator-nonebot/: utils.py
nonebot-plugin-csgo-case-simulator/: __init__.py  cases.py  crates.py  skins.py  utils.py
nonebot-plugin-csgo-case-simulator/json/: buffids.json  cases.json
nonebot-plugin-csgo-case-simulator/model/: __init__.py
src/plugins/csgo-case-simulator/: __init__.py  cases.py  utils.py
