[tool.poetry]
name = "nonebot-plugin-csgo-case-simulator"
version = "0.2.2"
description = "a nonebot based csgo case simulator"
authors = ["roiiiu <lyt2980999208@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot-plugin-csgo-case-simulator" }]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc4"
nonebot-adapter-onebot = "^2.2.3"
Pillow = "^9.5.0"
httpx = "^0.23.0"
pydantic = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
