[tool.poetry]
name = "nonebot-plugin-csgo-case-simulator"
version = "1.1.2"
description = "a nonebot based cs2/csgo case simulator"
authors = ["roiiiu <lyt2980999208@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot-plugin-csgo-case-simulator" }]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc4"
Pillow = "^9.5.0"
httpx = "^0.23.0"
pydantic = "^1.10.0"
nonebot-plugin-alconna = "^0.42"


[tool.nonebot]
plugins = ["nonebot_plugin_alconna"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
